--- a/.env
+++ b/.env
@@ -18,3 +18,32 @@
 APP_ENV=dev
 APP_SECRET=ebb7bcde2099bfe9c72b00a9933b0ec1
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/crm?serverVersion=5.7"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+#EMAILS TO WORK WITH TO FETCH DATA FROM API:
+API_KEY=api-alpex-zUgad2dUrDRSJM62
+AVD_EMAIL=ad@e-lade.lv
+COMP_EMAIL=lep_completed@lep.lv
+AUTO_EMAIL=autumatika@lep-energy.lv
+RM_EMAIL=remontdarbi@lep-energy.lv
+TMP_EMAIL=fc@lep-energy.lv
+PRIVATI_EMAIL=breksi@lep-energy.lv
+ZONA_A_EMAIL=purvciems_zona_a@lep-energy.lv
+ZONA_B_EMAIL=purvciems_zona_b@lep-energy.lv
+TEIKA_PURV_EMAIL=purvciems_zona_c@lep-energy.lv
+MEZCIEMS_EMAIL=mezciems_jugla@lep-energy.lv
+JUGLA_EMAIL=jugla@lep-energy.lv
+SARKA_EMAIL=sarkandaugava_mangali@lep-energy.lv
+VECMIL_EMAIL=vecmilgravis_jaunciems@lep-energy.lv
+TAME_EMAIL=tame@lep-energy.lv           
+NAV_SASK_EMAIL=nav.saskanots@lep-energy.lv 
+NAV_PIEK_EMAIL=nav.piekluve@lep-energy.lv
+PAPIL_UZD_EMAIL=papildu.uzd.ad@lep-energy.lv
