--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -19,6 +20,7 @@
 .env.local.php
 .env.*.local
 .env.*.local.php
+.env
 
 # Composer dependencies
 /vendor
